# PokemonAutochess

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  movement_rules.md  vcpkg.json
assets/models/: 0001_Bulbasaur.animset.json  0004_Charmander.animset.json  0007_Squirtle.animset.json  0016_Pidgey.glb  0019_Rattata.animset.json  0019_Rattata.glb  0025_Pikachu.animset.json  bulbasaur.glb  charmander.glb  pidgey.glb  rattata.glb  squirtle.glb
assets/shaders/: default.vert
assets/shaders/engine/: default.frag  default.vert  grid.frag  grid.vert  shader.frag
assets/shaders/lib/: curl2d.glsl  fbm2d.glsl  noise2d.glsl  tonemap.glsl
assets/shaders/model/: default.vert  model.frag  model.vert
assets/shaders/ui/: card.frag  card.vert  healthbar.frag  healthbar.vert  text.frag  text.vert
assets/shaders/vfx/: fire.frag  fire.vert  particle.frag  particle.vert
assets/shaders/vfx/fire/: fire_common.glsl  fire_palette.glsl  fire_tail.frag
config/: moves_config.json  pokemon_config.json
engine/core/: Application.cpp  Application.h  ResourceManager.cpp  ResourceManager.h
engine/render/: BoardRenderer.cpp  BoardRenderer.h  Camera3D.cpp  Camera3D.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  grid.frag  shader.vert  ui_shader.vert
game/: GameStateManager.cpp  GameWorld.cpp  GameWorld.h  PokemonInstance.h  StarterSelectionState.cpp  StarterSelectionState.h
scripts/config/: game.lua
scripts/states/: flow.lua  route1.lua  starter.lua  starter_selection.lua
scripts/systems/: camera.lua  card_shop.lua  combat.lua  movement.lua  round_system.lua
scripts/ui/: starter_menu.lua
src/engine/core/: Application.cpp  Application.h  IUpdatable.h  SystemRegistry.cpp  SystemRegistry.h  Window.cpp  Window.h
src/engine/events/: Event.h  EventManager.h  RoundEvents.h
src/engine/render/: BoardRenderer.cpp  BoardRenderer.h  Camera3D.cpp  Camera3D.h  FastGLTFLoader.h  FastGltfSmokeTest.cpp  FastGltfValidator.h  GLTFAccessors.cpp  GLTFAccessors.h  Model.cpp  Model.h  ModelAnimation.cpp  ModelAnimationTypes.h  ModelCache.cpp  ModelCache.h  ModelFastGltfLoad.inl  ModelMeshTypes.h  ModelStartupLog.h  Renderer.cpp  Renderer.h  TinyGltfImpl.cpp
src/engine/ui/: BattleFeed.cpp  BattleFeed.h  BootLoadingView.cpp  BootLoadingView.h  Card.cpp  Card.h  CardSystem.cpp  CardSystem.h  HealthBarData.h  HealthBarRenderer.cpp  HealthBarRenderer.h  TextRenderer.cpp  TextRenderer.h  UIManager.cpp  UIManager.h
src/engine/utils/: GLResource.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  stb_image_impl.cpp  stb_image_write_impl.cpp
src/engine/vfx/: ParticleSystem.cpp  ParticleSystem.h
src/game/: AnimSetLoader.cpp  AnimSetLoader.h  GameConfig.cpp  GameConfig.h  GameState.h  GameStateManager.h  GameWorld.cpp  GameWorld.h  GridOccupancy.h  LogBus.cpp  LogBus.h  LuaBindings.cpp  LuaBindings.h  LuaScript.cpp  LuaScript.h  MovesConfigLoader.cpp  MovesConfigLoader.h  PokemonConfigLoader.cpp  PokemonConfigLoader.h  PokemonInstance.h  ScriptedState.cpp  ScriptedState.h  StarterSelectionState.cpp  StarterSelectionState.h
src/game/state/: CombatState.cpp  CombatState.h  PlacementState.cpp  PlacementState.h  Route1State.cpp  Route1State.h  StarterSelectionState.cpp  StarterSelectionState.h
src/game/systems/: BenchSystem.cpp  BenchSystem.h  CameraSystem.cpp  CameraSystem.h  CardSystem.cpp  CardSystem.h  CombatSystem.cpp  CombatSystem.h  MovementSystem.cpp  MovementSystem.h  RoundSystem.cpp  RoundSystem.h  ShopSystem.cpp  ShopSystem.h  UnitInteractionSystem.cpp  UnitInteractionSystem.h
src/game/systems/movement/: AStarPathfinder.cpp  AStarPathfinder.h  MovementExecutor.cpp  MovementExecutor.h  MovementPlanner.cpp  MovementPlanner.h
src/game/ui/: CardFactory.cpp  CardFactory.h
src/game/vfx/: CharmanderTailFireVFX.cpp  CharmanderTailFireVFX.h  TailFireVFX.cpp  TailFireVFX.h
